<resources>
    <string name="app_name">Meet Up</string>
    <string name="facebook_app_id">332363504181964</string>
    <string name="fb_login_protocol_scheme">fb332363504181964</string>

    <string name="userLogin">User Name</string>
    <string name="userPass">Password</string>
    <string name="userEmail">Email</string>
    <string name="loginButton">Login</string>
    <string name="notRegistered">Not registered yet?</string>
    <string name="registerButton">Register</string>

    <string name="tabCurrent">Proximos</string>
    <string name="tabFinished">Terminados</string>
    <string name="dateSeparate">-</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="newMeet">New Meet</string>
    <string name="confirm_pass">Confirm Pass</string>

    <string name="emptyField">Please fill this field</string>
    <string name="passes_no_match">The password does not match</string>
    <string name="meets">Meets</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_log_out">Are you sure you want to exit?</string>
    <string name="separateO">OR</string>
    <string name="my_account">My Account</string>
    <string name="meet_title">Meet title</string>
    <string name="meet_description">Meet Description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <string name="openCameraError">Could not open the camera</string>
    <string name="createCameraDirError">Could not create the directory</string>
    <string name="init_date">Init Date</string>
    <string name="end_date">End Date</string>
    <string name="place">Place</string>
    <string name="no_account">Dont you have and account?</string>
    <string name="sing_up">Sing Up</string>
</resources>
