<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Modules.Login.LoginActivity">
    <ImageView
        android:src="@drawable/materialbackground_portrait"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <pablogarcia.meetup.CustomViews.CircularImageView
                android:id="@+id/imageUserLogin"
                android:src="@drawable/userlogin"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:padding="8dp"
                android:layout_gravity="center_horizontal"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/userNameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="8pt"
                    android:hint="@string/userLogin"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/userPassInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

                <EditText
                    android:id="@+id/userPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userPass"
                    android:textSize="7pt"/>
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:text="@string/loginButton"
                android:textColor="@color/colorTextIcons"
                android:backgroundTint="@color/colorAccent"
                android:background="@drawable/round_button"
                android:layout_margin="8dp"
                android:textSize="16sp"
                android:onClick="onClickButtonLogin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/separateO"/>

            <com.facebook.login.widget.LoginButton
                xmlns:facebook="http://schemas.android.com/apk/res-auto"
                android:id="@+id/facebook_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:textSize="16sp"
                facebook:com_facebook_login_text="Connect with facebook"
                facebook:com_facebook_logout_text="Logout" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>